# Algorithms-Basics-It-Incubator

./: .gitignore  CMakeLists.txt
Unit-1-IvanD/: Ladder.cpp  Ladder.h  Task1.cpp  Task1.h  Task2.cpp  Task2.h  Task3.cpp  Task3.h  main.cpp
Unit-1-IvanD/cppFile/: Converter.cpp  DepositBYN.cpp  Discharges.cpp  Fibonacci.cpp  Ladder.cpp  NumberConversion.cpp  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  main.cpp
Unit-1-IvanD/headerFile/: Converter.h  DepositBYN.h  Discharges.h  Fibonacci.h  Ladder.h  NumberConversion.h  Task1.h  Task2.h  Task3.h  Task4.h
