cmake_minimum_required(VERSION 3.27)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 Unit-1-IvanD/cppFile/main.cpp
        Unit-1-IvanD/headerFile/Task1.h
        Unit-1-IvanD/headerFile/Task2.h
        Unit-1-IvanD/cppFile/Task1.cpp
        Unit-1-IvanD/cppFile/Task2.cpp
        Unit-1-IvanD/cppFile/Task3.cpp
        Unit-1-IvanD/headerFile/Task3.h
        Unit-1-IvanD/cppFile/Ladder.cpp
        Unit-1-IvanD/headerFile/Ladder.h
        Unit-1-IvanD/cppFile/Task4.cpp
        Unit-1-IvanD/headerFile/Task4.h)
