cmake_minimum_required(VERSION 3.27)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 Unit-1-IvanD/cppFile/main.cpp
        Unit-1-IvanD/headerFile/DepositBYN.h
        Unit-1-IvanD/cppFile/DepositBYN.cpp
        Unit-1-IvanD/cppFile/Converter.cpp
        Unit-1-IvanD/headerFile/Converter.h
)
