cmake_minimum_required(VERSION 3.27)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 Unit-1-IvanD/cppFile/main.cpp
        Unit-1-IvanD/cppFile/NumberConversion.cpp
        Unit-1-IvanD/headerFile/NumberConversion.h
        Unit-1-IvanD/cppFile/Discharges.cpp
        Unit-1-IvanD/headerFile/Discharges.h
        Unit-1-IvanD/cppFile/Fibonacci.cpp
        Unit-1-IvanD/headerFile/Fibonacci.h
)
